第一次提交

--- a/index.html
+++ b/index.html
@@ -1,1 +1,298 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blue Prince - Shifting Rooms Mystery Game | Find Room 46 | Puzzle Adventure</title>
+    <meta name="description" content="Blue Prince - a genre-defying puzzle adventure with shifting rooms. Explore Mt. Holly's mysterious mansion, draft your path, and uncover the secrets of Room 46. Available on PC, PS5, Xbox.">
+    <meta name="keywords" content="Blue Prince game, Room 46, Mt. Holly Manor, puzzle adventure, shifting rooms, mystery game, rogue-like exploration, Dogubomb, Raw Fury">
+    <link rel="canonical" href="https://blueprince.top">
+    <meta property="og:title" content="Blue Prince - Shifting Rooms Mystery Game | Find Room 46">
+    <meta property="og:description" content="Explore Mt. Holly's mysterious shifting rooms in search of the legendary Room 46. A genre-defying puzzle adventure with daily room resets and strategic exploration.">
+    <meta property="og:image" content="https://blueprince.top/images/og-image.jpg">
+    <meta property="og:url" content="https://blueprince.top">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Blue Prince - Shifting Rooms Mystery Game | Find Room 46">
+    <meta name="twitter:description" content="Explore Mt. Holly's mysterious shifting rooms in search of the legendary Room 46. A genre-defying puzzle adventure with daily room resets.">
+    <meta name="twitter:image" content="https://blueprince.top/images/twitter-image.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Blue Prince",
+      "description": "A genre-defying experience filled with mystery, strategy, and puzzles that weave together to create an unpredictable journey through a manor with shifting rooms.",
+      "image": "https://blueprince.top/images/og-image.jpg",
+      "gameLocation": {
+        "@type": "Place",
+        "name": "Mt. Holly Manor"
+      },
+      "applicationCategory": "Game",
+      "operatingSystem": "Windows, PlayStation 5, Xbox Series X|S",
+      "genre": ["Puzzle", "Adventure", "Mystery", "Rogue-like"],
+      "gamePlatform": ["PC", "PlayStation 5", "Xbox Series X|S"],
+      "contentRating": "Everyone",
+      "offers": {
+        "@type": "Offer",
+        "availability": "https://schema.org/PreOrder",
+        "price": "25.00",
+        "priceCurrency": "GBP"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Raw Fury"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "Dogubomb"
+      },
+      "url": "https://blueprince.top",
+      "datePublished": "2025-04-10",
+      "review": {
+        "@type": "Review",
+        "reviewBody": "Thoughtful design details and puzzles will keep you returning to an atmospherically uninhabited family mansion to search for a hidden room and family secrets",
+        "author": {
+          "@type": "Person",
+          "name": "Jordan Erica Webber"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "The Guardian"
+        }
+      }
+    }
+    </script>
+</head>
+<body>
+    <a href="#main-content" class="skip-to-content">Skip to content</a>
+    <header>
+        <div class="container">
+            <nav aria-label="Main navigation">
+                <div class="logo">Blue Prince</div>
+                <div class="menu-toggle" aria-label="Toggle menu" role="button" aria-expanded="false">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#gameplay">Gameplay</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#reviews">Reviews</a></li>
+                    <li><a href="#platforms">Platforms</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main id="main-content">
+        <section class="hero">
+            <div class="container">
+                <h1>Blue Prince</h1>
+                <p class="tagline">Navigate the shifting rooms of Mt. Holly in search of the legendary Room 46.</p>
+                <div class="cta-buttons">
+                    <a href="https://store.steampowered.com/app/1569580/_/" class="cta-primary" rel="noopener">Wishlist Now</a>
+                    <a href="#trailer" class="cta-secondary">Watch Trailer</a>
+                </div>
+                <div class="platforms-mini">
+                    <span class="platform-mini">PC</span>
+                    <span class="platform-mini">PS5</span>
+                    <span class="platform-mini">Xbox Series X|S</span>
+                </div>
+                <div class="price-badge">$29.99 <span class="discount">-10%</span></div>
+                <p class="release-date">Now Available - Released April 10, 2025</p>
+                <p class="user-rating">Very Positive (80% of 491 reviews)</p>
+                <div class="game-pass-badge">Included with Game Pass</div>
+            </div>
+        </section>
+
+        <section id="about" class="about">
+            <div class="container">
+                <h2>Welcome to Mt. Holly</h2>
+                <p class="description">
+                    Blue Prince is a genre-defying experience filled with mystery, strategy, and puzzles that weave together
+                    to create an unpredictable journey through a manor with shifting rooms. As the heir to Mt. Holly, you must
+                    explore its ever-changing halls while uncovering a past filled with intrigue and secrets.
+                </p>
+                <p class="quote">
+                    "...the sort of game that feels as though it were made just for you – and the elements that make it truly special are best discovered without forewarning."
+                    <span class="quote-author">- The Guardian</span>
+                </p>
+            </div>
+        </section>
+
+        <section id="features" class="features">
+            <div class="container">
+                <div class="feature-card">
+                    <h2>Drafting Your Journey</h2>
+                    <p>
+                        Upon reaching a closed door in Mt. Holly, you decide what room appears behind it from a choice of three options.
+                        Each decision shapes your path as you navigate through the manor. Every door can reveal new and exciting chambers
+                        that contain their own unique challenges and secrets.
+                    </p>
+                </div>
+                
+                <div class="feature-card">
+                    <h2>Every Step Counts</h2>
+                    <p>
+                        Your progress each day is shaped by the rooms you select to draft and the tools you find within them.
+                        Items in the game can be used in creative ways to fuel your exploration deeper into the house,
+                        allowing you to adopt unique strategies to combat the challenges that each day brings.
+                    </p>
+                </div>
+                
+                <div class="feature-card">
+                    <h2>A History in the Making</h2>
+                    <p>
+                        As your journey takes you further into the mansion's depths, you start to discover that there is more
+                        lurking under the surface than a missing room. Investigate a past woven with the threads of blackmail,
+                        political intrigue, and the mysterious disappearance of a local children's book author.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="gameplay" class="gameplay">
+            <div class="container">
+                <h2>Innovative Gameplay</h2>
+                <div class="gameplay-grid">
+                    <div class="gameplay-item">
+                        <h3>Shifting Floor Plan</h3>
+                        <p>Each dawn brings a new configuration to Mt. Holly. The house's shapeshifting floor plan is a five-by-nine grid to be filled anew each day with rooms you draft.</p>
+                    </div>
+                    <div class="gameplay-item">
+                        <h3>Room Drafting System</h3>
+                        <p>When opening a door, choose from three random room options. The further you get from the entrance, the more likely you are to draw rarer rooms.</p>
+                    </div>
+                    <div class="gameplay-item">
+                        <h3>Resource Management</h3>
+                        <p>Manage keys, money, energy, and gems as you explore. Each room requires energy to enter, forcing strategic decisions about your exploration path.</p>
+                    </div>
+                    <div class="gameplay-item">
+                        <h3>Puzzle Solving</h3>
+                        <p>Encounter a variety of puzzles throughout the manor. Solve them to unlock new areas, gain permanent upgrades, and uncover the mysteries of Mt. Holly.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="gallery" class="gallery">
+            <div class="container">
+                <h2>Enter The Manor</h2>
+                <div class="gallery-grid">
+                    <div class="gallery-item" style="background-image: url('images/manor-library.jpg')" aria-label="Gallery image of Blue Prince library room"></div>
+                    <div class="gallery-item" style="background-image: url('images/manor-observatory.jpg')" aria-label="Gallery image of Blue Prince observatory room"></div>
+                    <div class="gallery-item" style="background-image: url('images/manor-study.jpg')" aria-label="Gallery image of Blue Prince study room"></div>
+                    <div class="gallery-item" style="background-image: url('images/manor-hallway.jpg')" aria-label="Gallery image of Blue Prince mysterious hallway"></div>
+                </div>
+                <p class="gallery-caption">Explore Mt. Holly's calming cel-shaded art style and discover the unique character of each room.</p>
+            </div>
+        </section>
+
+        <section id="reviews" class="reviews">
+            <div class="container">
+                <h2>Critical Acclaim</h2>
+                <div class="reviews-grid">
+                    <div class="review-card">
+                        <div class="review-source">The Guardian</div>
+                        <p class="review-text">"It is the sort of game that feels as though it were made just for you... Before I knew it the sun had long since set and my lounge was lit only by my Steam Deck and a game that had fast become my new obsession."</p>
+                        <div class="review-author">- Jordan Erica Webber</div>
+                    </div>
+                    <div class="review-card">
+                        <div class="review-source">RPGFan</div>
+                        <p class="review-text">"Blue Prince breathes new life into both the adventure and roguelike genres with its freeform gameplay structure, intricate puzzle design, and intriguing lore."</p>
+                    </div>
+                    <div class="review-card">
+                        <div class="review-source">Gaming Bible</div>
+                        <p class="review-text">"It's an endlessly captivating labyrinth of twists and turns, with a world that will crawl inside your head and refuse to leave..."</p>
+                        <div class="review-score">10/10</div>
+                    </div>
+                    <div class="review-card dev-quote">
+                        <div class="review-source">Daniel Mullins</div>
+                        <p class="review-text">"The best thing I played last year."</p>
+                        <div class="review-author">- Creator of Inscryption</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="platforms" class="platforms">
+            <div class="container">
+                <h2>Available On</h2>
+                <div class="platform-icons">
+                    <a href="https://store.steampowered.com/app/1569580/_/" class="platform" rel="noopener">
+                        <span class="platform-name">Steam</span>
+                    </a>
+                    <a href="https://www.playstation.com" class="platform" rel="noopener">
+                        <span class="platform-name">PlayStation 5</span>
+                    </a>
+                    <a href="https://www.xbox.com/sv-SE/games/store/blue-prince/9PFRTPRQ569Q" class="platform" rel="noopener">
+                        <span class="platform-name">Xbox Series X|S</span>
+                    </a>
+                </div>
+                <div class="game-pass-info">
+                    <h3>Xbox Game Pass</h3>
+                    <p>Blue Prince is available with Xbox Game Pass Ultimate and PC Game Pass subscriptions.</p>
+                    <a href="https://www.xbox.com/xbox-game-pass" class="game-pass-link" rel="noopener">Learn More</a>
+                </div>
+                <p class="metacritic">Metacritic Score: <span class="score">92</span></p>
+            </div>
+        </section>
+
+        <section id="faq" class="faq">
+            <div class="container">
+                <h2>Frequently Asked Questions</h2>
+                <div class="faq-grid">
+                    <div class="faq-item">
+                        <h3>When was Blue Prince released?</h3>
+                        <p>Blue Prince was released on April 10, 2025.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>What are the system requirements?</h3>
+                        <p>Minimum: Windows 10/11 64-bit, i5-2300/Ryzen 3 1200, 16GB RAM, NVIDIA GTX 1060/AMD RX580. Recommended: i5 4690K/Ryzen 5 1500x, GTX 1080/RX 5700. Storage: 6 GB available space.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>How does the room system work?</h3>
+                        <p>The manor's rooms change position and content each dawn. Players must strategically choose which rooms to explore from a random choice of three options when opening doors, using tools found within to progress.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>How much does Blue Prince cost?</h3>
+                        <p>Blue Prince costs $29.99 (299.00 kr on Xbox), with a 10% introductory discount ($26.99) until April 20, 2025. The game is also included with Xbox Game Pass Ultimate and PC Game Pass subscriptions.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>What games is Blue Prince similar to?</h3>
+                        <p>Blue Prince combines elements similar to What Remains of Edith Finch, Gone Home, Outer Wilds, and the board game Betrayal at House on the Hill, creating a unique puzzle adventure experience.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Does Blue Prince support cloud gaming?</h3>
+                        <p>Yes, Blue Prince supports cloud gaming through Xbox Cloud Gaming with an Xbox Game Pass Ultimate subscription.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2025 Blue Prince. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('.nav-links').classList.toggle('active');
+            this.classList.toggle('active');
+            this.setAttribute('aria-expanded', this.classList.contains('active'));
+        });
+    </script>
+</body>
+</html> 
